# ogre3d-examples

./: CMakeLists.txt  LICENSE.md  README.md  plugins.cfg.sample
assets/compositors/: workspace.compositor
assets/models/: Cube.material  Cube.mesh
base/: CMakeLists.txt  Game.cc  Game.h
base/mygui/: MyGUI_Ogre21Renderable.cpp
cmake/: FindMyGUI.cmake  FindOGRE.cmake  FindSDL2.cmake
cube/: CMakeLists.txt  Cube.cc  Cube.h  main.cc
gui/: CMakeLists.txt  Gui.cc  Gui.h  main.cc
